syntax = "proto3";

package levels;

option go_package = "pbLevels";

service Level{
    rpc GetLevel(LevelRequest) returns (LevelResponse) {}
    rpc CheckAnswer(AnswerRequest) returns (AnswerResponse) {}
    rpc GetAllLevel(AllLevelRequest) returns (AllLevelResponse) {}
}

message AllLevelRequest{
    string teamID = 1;
}

message AllLevelResponse{
    int32 total = 1;
}

message AnswerRequest{
    string answer = 1;
    int32 number = 2;
    string teamID = 3;
}

message AnswerResponse{
    bool valid = 1;
}

message LevelResponse{
    int32 number = 1;
    string name = 2;
    string urlalias = 3;
    string html = 4;
    string js = 5;
    bool final = 6;
}

message LevelRequest{
    int32 id = 1;
    string teamID = 2;
}